--- a/package.json
+++ b/package.json
@@ -8,6 +8,21 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "ace-css": "^1.1.0",
+    "font-awesome": "^4.7.0",
     "json-server": "0.9"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "elm-webpack-loader": "^4.5.0",
+    "file-loader": "^1.1.11",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.14.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
