--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "諦念 <teinen.github@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server --hot --inline"
+  },
   "dependencies": {
     "ace-css": "^1.1.0",
     "font-awesome": "^4.7.0",
@@ -22,6 +26,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4"
   }
